# eqsettings

./: App.cpp  App.h  CMakeLists.txt  Configurator.cpp  Configurator.h  LICENSE.txt  PluginConfig.cpp  PluginConfig.h  README.md  Script.cpp  Script.h  ScriptLoader.cpp  ScriptLoader.h  main.cpp  project.h
